--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -7,46 +7,38 @@
     <div class="row vendor-profile-header">
 
         <div class="col-sm-5 vendor-avatar">
-            <div class="vendor-avatar-img">
-            <img ng-src="{{vendorDetails.vendor.photo.image_url}}">
-            
-            <div class="col-xs-12 like-button-markets">
-                <!-- <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
-                  <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
-                    <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : vendorDetails.vendor.is_liked}"></span>
-                    <span ng-hide="vendorDetails.vendor.is_liked">Like</span>
-                    <span ng-show="vendorDetails.vendor.is_liked">Unlike</span>
-                    <span class="like-container" ng-show="vendorDetails.vendor.total_likes > 0">
-                      {{vendorDetails.vendor.total_likes}}
+            <div class="vendor-avatar-img" style="background-image:url({{vendorDetails.vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                <!-- <img ng-src="{{vendorDetails.vendor.photo.image_url}}"> -->
+                <div class="col-xs-12">
+                        <span class="pull-right like-button-position" data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+                        <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
+                            <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : vendorDetails.vendor.is_liked}"></span>
+                            <span ng-hide="vendorDetails.vendor.is_liked">Like</span>
+                            <span ng-show="vendorDetails.vendor.is_liked">Unlike</span>
+                            <span class="like-button" ng-show="vendorDetails.vendor.total_likes > 0">
+                              {{vendorDetails.vendor.total_likes}}
+                            </span>
+                        </button>
                     </span>
-                  </button>
-                </div> -->
+                </div>
+
             </div>
-        </div></div>
+
+        </div>
 
         <div class="col-sm-7 vendor-header-content">
 
             <span class="new-vendor-name-style">
                 {{vendorDetails.vendor.company_name}}
             </span>
-            <span class="like-padding" data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
-              <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
-                <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : vendorDetails.vendor.is_liked}"></span>
-                <span ng-hide="vendorDetails.vendor.is_liked">Like</span>
-                <span ng-show="vendorDetails.vendor.is_liked">Unlike</span>
-                <span class="" ng-show="vendorDetails.vendor.total_likes > 0">
-                  {{vendorDetails.vendor.total_likes}}
-                </span>
-              </button>
-            </span>
-
+            <br>
             
-            <span class="new-hr-heading-style">
+            <div class="new-hr-heading-style">
                 <span ng-show="StateService.getCurrentUser().vendor.address.city != null && StateService.getCurrentUser().vendor.address.state != null">            
                     <span class="glyphicon glyphicon-map-marker"></span> {{vendorDetails.vendor.address.city}}, {{vendorDetails.vendor.address.state}} | 
                 </span>
                 <span ng-hide="StateService.getCurrentUser().vendor.webpage == null"><a href="http://{{StateService.getCurrentUser().vendor.webpage}}">Our Website</a> |</span><span ng-hide="vendorDetails.vendor.twitter_url == null"> <a href="{{vendorDetails.vendor.twitter_url">Twitter</a> |</span><span ng-hide="vendorDetails.vendor.facebook_url == null"><a ng-hide="vendorDetails.vendor.facebook_url == null" href="{{vendorDetails.vendor.facebook_url}}"> Facebook</a> |</span><span ng-hide="vendorDetails.vendor.phone == null"> {{vendorDetails.vendor.phone}} |</span>
-            </span>
+            </div>
             <hr>
             <div class="description-container">
                 {{vendorDetails.vendor.description}}
@@ -87,8 +79,8 @@
 
                     </div>
 
-                    <div class="location-details">
-                        <div>
+                    <div class="row seller-location-details">
+                        <div class="col-xs-12">
                         <p><b>HOURS:</b>
                                 <ul class="list-inline store-hours">&nbsp
                                     <li ng-repeat="day in location.address.hours">
@@ -97,16 +89,19 @@
                                 </ul>
                         </p>
                         </div>
+                        <div class="col-xs-12">
                         <p><b>LOCATION:</b>
                             {{location.address.addr_line1}},
                             {{location.address.city}}, 
                             {{location.address.state}}, 
                             {{location.address.zipcode}}
                         </p>
-
+                        </div>
+                        <div class="col-xs-12">
                         <p class="indent-after-first-line"><b>DETAILS:</b>
                             {{location.description}}
                         </p>
+                    </div>
                     </div>
                 </div>    
             </div>
@@ -119,7 +114,7 @@
             </div>
             <!-- repeating for each location that seller has in the db -->
             <div ng-repeat="location in vendorDetails.selling_locations | orderBy:'name'" ng-mouseenter="highlightPins(location)" ng-mouseleave="unHighlightPins(location)" class="container-for-cards">
-                <div class="card-formatting">
+                <div class="card-formatting ">
                     <div class="row">
 
                         <!-- Display the locations name -->
@@ -129,36 +124,45 @@
 
                     </div>
 
-                    <div class="location-details">
-                        <p ng-show="location.date"><b>DATE:</b>
-                            {{location.date | date:" EEEE',' MMMM d'"}},
-                            {{location.address.hours[0].from_hour}} - 
-                            {{location.address.hours[0].to_hour}}
-                        </p>
-                        <div ng-show="location.date == null" >
-                        <p><b>HOURS:</b>
-                                <ul class="list-inline store-hours">&nbsp
-                                <li ng-repeat="day in location.address.hours">
-                                    <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
-                                </li>
-
-                                </ul>
-                        </p>
+                    <div class="row seller-location-details">
+                        <div class="col-xs-12">
+                            <p ng-show="location.date"><b>DATE:</b>
+                                {{location.date | date:" EEEE',' MMMM d'"}},
+                                {{location.address.hours[0].from_hour}} - 
+                                {{location.address.hours[0].to_hour}}
+                            </p>
                         </div>
-                        <p><b>LOCATION:</b>
-                            {{location.address.addr_line1}},
-                            {{location.address.city}}, 
-                            {{location.address.state}}, 
-                            {{location.address.zipcode}}
-                        </p>
+                        <div class="col-xs-12">
+                            <div ng-show="location.date == null" >
+                            <p><b>HOURS:</b>
+                                    <ul class="list-inline store-hours">&nbsp
+                                    <li ng-repeat="day in location.address.hours">
+                                        <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
+                                    </li>
 
-                        <p><b>CONTACT INFORMATION:</b>
-                            {{location.phone}} | {{location.email}}
-                        </p>
-
-                        <p class="indent-after-first-line"><b>DETAILS:</b>
-                            {{location.description}}
-                        </p>
+                                    </ul>
+                            </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>LOCATION:</b>
+                                {{location.address.addr_line1}},
+                                {{location.address.city}}, 
+                                {{location.address.state}}, 
+                                {{location.address.zipcode}}
+                            </p>
+                        </div>
+                        <div class="col-xs-12">
+                            <p class="indent-after-first-line">
+                                <b>CONTACT INFORMATION:</b>
+                                {{location.phone}} | {{location.email}}
+                            </p>
+                        </div>
+                        <div class="col-xs-12">
+                            <p class="indent-after-first-line"><b>DETAILS:</b>
+                                {{location.description}}
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -169,22 +173,28 @@
 	<br>
 
 <!--Display Seller's Inventory-->
-    <hr>
-    <div class="row">
-        <div class="col-xs-9 new-hr-heading-style">
-            {{vendorDetails.products.length}} PRODUCT<span ng-hide="vendorDetails.products.length === 1">S</span> SOLD BY {{vendorDetails.vendor.company_name | uppercase}}
+    <div ng-hide="vendorDetails.products.length == 0">
+        <hr>
+        <div class="row">
+            <div class="col-xs-9 new-hr-heading-style">
+                {{vendorDetails.products.length}} PRODUCT<span ng-hide="vendorDetails.products.length === 1">S</span> SOLD BY {{vendorDetails.vendor.company_name | uppercase}}
+            </div>
         </div>
-    </div>
-    <hr>
-    <br>
+        <hr>
+        <br>
 
-	<div class="row" id="masonry-container card-formatting">
-		<div class="container-for-cards">
-	        <div class="ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in vendorDetails.products" >
-	          <product-card data="item"></product-card>
-	        </div>
-	    </div>
-	</div>
+        
+        
+
+    	<div class="row" id="masonry-container card-formatting">
+    		<div class="container-for-cards">
+    	        <div class="ms-item col-lg-3 col-md-4 col-sm-4 col-xs-6" ng-repeat="item in vendorDetails.products" >
+    	          <product-card data="item"></product-card>
+    	        </div>
+    	    </div>
+    	</div>
+    </div>
+
 </div>
 <!-- INJECTING FOOTER.HTML -->
 <footer></footer>
