--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1404,3 +1404,34 @@ hr {
 .is-inactive {
   margin-top: 50px;
 }
+
+
+.developer-pic {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.developer-pic img {
+  background-color: #FFFFFF;
+  padding: 3px;
+  border: 1px solid #BBBBBB;
+  width: 125px;
+  max-width: 100%
+}
+
+.about-content{
+  max-width: 800px;
+  width: 100%;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: justify;
+}
+
+.contactus-content a {
+  color:#696969;
+  font-weight: bold;
+}
+
