--- a/src/client/app/views/contactus.html
+++ b/src/client/app/views/contactus.html
@@ -2,19 +2,69 @@
 <div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
 
 
-<div class="customer-container">
+<div class="customer-container center contactus-content">
 
-<h2> About beLocal </h2>
+<h2 class="new-heading-style"> About beLocal</h2>
 
-<p> Our mission is to connect you with locally sourced food by allowing you to explore the local markets and food vendors. </p>
+<p class="about-content"> 
+	beLocal is a web application that connects local farmers and foodmakers with the community by allowing them to post information about their business, what items they produce, and where they will be selling.
+</p>
 
-<h2> Who Are We? </h2>
+<br>
+<h2 class="new-heading-style"> The beLocal Team</h2>
 
-<p> We are senior students at UVic who are passionate about local food. We wanted to do our part to help the local food community and the result is beLocal. </p>
+<p class="about-content"> 
+	beLocal was developed as a project for a senior level computer science course, Startup Programming (CSC 485B), at the University of Victoria. All of the beLocal developers are senior computer science and software engineering students at UVic who are foodies at heart and wanted to help the raise awareness about Victoria's local food community. For more information, or to track our progress, please visit our GitHub repository at <a href="https://github.com/rpanjwani/beLocal" target="_blank">https://github.com/rpanjwani/beLocal</a>
+</p>
 
-<h2> We Would Love to Hear From You </h2>
+<br>
 
-<p> BeLocal is a work in progress. Have suggestions, feedback, ideas or would just like to offer kudos?  Feel free to email us at: <a href="mailto:belocalvictoria@gmail.com">belocalvictoria@gmail.com</a></p>
+
+<div class="row developer-pic">
+	<div class="col-md-3 hidden-xs"></div>
+	<div class="developer-pic col-md-2 col-xs-4">
+		<a href="http://scott-low.com" target="_blank">
+			<img src="/images/developers/Scott.png" class="img-circle"><br>
+			Scott Low
+		</a>
+	</div>
+	<div class="developer-pic col-md-2 col-xs-4">
+		<a href="https://github.com/clebeuf" target="_blank">
+			<img src="/images/developers/Carly.png" class="img-circle"><br>
+			Carly Lebeuf
+		</a>
+	</div>
+	<div class="developer-pic col-md-2 col-xs-4">
+		<a href="https://github.com/cakebrewery" target="_blank">
+			<img src="/images/developers/Sam.png" class="img-circle"><br>
+			Sam Navarrete
+		</a>
+	</div>
+	<div class="col-md-3 hidden-xs"></div>
+</div>
+<div class="row developer-pic">
+	<div class="col-md-4 col-xs-2"></div>
+	<div class="developer-pic col-md-2 col-xs-4">
+		<a href="https://github.com/sheoranjs24" target="_blank">
+			<img src="/images/developers/Jyoti.png" class="img-circle"><br>
+			Jyoti Sheoran
+		</a>
+	</div>
+	<div class="developer-pic col-md-2 col-xs-4">
+		<a href="https://github.com/rpanjwani" target="_blank">
+			<img src="/images/developers/Riz.png" class="img-circle"><br>
+			Riz Panjwani
+		</a>
+	</div>
+	<div class="col-md-4 col-xs-2"></div>
+</div>
+
+
+<br><br>
+
+
+<h2 class="new-heading-style"> We Would Love to Hear From You </h2>
+<p  class="about-content">beLocalVictoria.me is still a work in progress. If you have questions, feedback, or suggestions, please feel free to email us at <a href="mailto:{{emailAddress}}">{{emailAddress}}</a></p>
 
 </div>
 
