Fixed error of 2 logos on navbar-xs

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -138,13 +138,13 @@
   height: 35px;
 }
 
-@media screen and (max-width: 325px) {
+@media (max-width: 325px) {
     .full-logo {
         display: none !important;
     }
 }
 
-@media screen and (min-width: 326px) {
+@media (min-width: 326px) {
     .small-logo {
         display: none !important;
     }
