--- a/src/client/app/views/search.html
+++ b/src/client/app/views/search.html
@@ -13,9 +13,20 @@
 
     <!-- Product Search Results -->
     <div ng-show="productResults.length > 0">
+
+        <div class="row visible-xs">
+          <div class="col-xs-12">
+            <hr>
+            <p class="small-header">Categories</p>
+            <select class="form-control" ng-model="dropdownCategory" ng-options="category.name for category in dropdownCategoryList" ng-change="updateCategoryDropdown()"></select>
+            <br>
+            <hr>
+          </div>                       
+        </div>
+
         <div class="row">
             <!-- DISPLAY ITEMS -->
-            <div class="col-sm-10 col-xs-6">
+            <div class="col-sm-10 col-xs-12">
                 <div class="new-heading-style">
                     Search Results for "{{query}}" in {{selectedCategory}}
                 </div>
@@ -26,7 +37,7 @@
                 </div>
             </div>
             <!-- DISPLAY SIDE BAR OF ALL CATEGORIES & TAGS-->
-            <div class="col-sm-2 col-xs-6 tag-bar">
+            <div class="col-sm-2 col-xs-6 tag-bar hidden-xs">
                 <hr>
                 <p class="small-header">Categories</p>
                 <ul class="tag-list" role="">
