--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -645,13 +645,15 @@
                 <h4 class="modal-title">Update Social Media<br /><small>Please review the following fields and check or uncheck the boxes below to update your various social media accounts.</small></h4>
             </div>
             <div class="modal-body">
-                <label><i class="fa fa-facebook-square"></i> Facebook Status Update</label>            
+                <label><i class="fa fa-facebook-square"></i> Facebook Status Update</label> 
+                <p><strong>Note:</strong>  Permission to post to your wall is pending approval from Facebook. If you want to share this update, please copy and paste it into your Facebook status!</p>           
                 <textarea rows="10" required ng-model="facebookString" type="text" name="facebookField" class="form-control" id="facebook-field" placeholder="Facebook Status Update" />
-                <div class="checkbox">
+<!--                 <div class="checkbox">
                   <label>
                     <input name="fbCheck" ng-model="facebookChecked" type="checkbox"><strong>Post to Facebook</strong>
                   </label>
-                </div>
+                </div> -->
+                <br>
                 <label><i class="fa fa-twitter-square"></i> Twitter Status Update</label>
                 <div ng-show="isTwitterAuth">
                     <textarea rows="4" required ng-model="twitterString" type="text" name="twitterField" class="form-control" id="twitter-field" placeholder="Twitter Status Update" maxlength="140" />
