Added links to google map for addresses

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1498,6 +1498,10 @@ hr {
   font-size: 12px !important;
 }
 
+.info-window-text a {
+  color: #696969;
+}
+
 .is-inactive {
   margin-top: 50px;
 }
