--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -8,7 +8,7 @@ html {
       rgba(0, 0, 0, 0.5), 
       rgba(0, 0, 0, 0.5)
     ), 
-    url('/images/splashpage2.jpg') 
+    url('/images/splashpage.jpg') 
     no-repeat center center fixed !important;
     background-size: cover !important;
 
