--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -64,7 +64,8 @@
                             </div>
                             <p class="getting-started-font">To register as a foodie, sign up using Facebook by clicking the button below.</p>
                             <br>                       
-                            <a ng-click="signUpAsCustomer()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
+                            <a ng-click="signUpAsCustomer()" style="margin-right: 10px;" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
+                            <a ng-click="signUpAsCustomerNoFB()" data-toggle="modal" data-target="#createUserModal" class="btn btn-lg beLocal-btn-filled">Sign Up Without Facebook</a>                            
                         </div>
                     </div>
                 </div>
@@ -100,7 +101,7 @@
                             <p class="getting-started-font">To register as a farmer or foodmaker, sign up using Facebook by clicking the button below.</p>
                             <br>
                             <a ng-click="signUpAsVendor()" style="margin-right: 10px;" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
-                            <a data-toggle="modal" data-target="#createVendorModal" class="btn btn-lg beLocal-btn-filled">Sign Up Without Facebook</a>                            
+                            <a ng-click="signUpAsVendorNoFB()" data-toggle="modal" data-target="#createUserModal" class="btn btn-lg beLocal-btn-filled">Sign Up Without Facebook</a>
                         </div>
                     </div>
                 </div>
@@ -136,7 +137,7 @@
                             <div class="col-xs-12 col-md-12">
                                 <div class="form-group" ng-class="{ 'has-error' : loginSubmitted && loginForm.password.$invalid }">
                                     <label for="item-name">Password</label>
-                                    <input required ng-model="loginPassword" type="text" name="password" class="form-control" placeholder="Password" maxlength="40"/>
+                                    <input required ng-model="loginPassword" type="password" name="password" class="form-control" placeholder="Password" maxlength="40"/>
                                 </div>
                             </div>
                         </div>                
@@ -195,20 +196,21 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<!-- Create Vendor Modal -->
-<div class="modal fade" id="createVendorModal">
+<!-- Create User Modal -->
+<div class="modal fade" id="createUserModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Sign Up as a Farmer<br /><small>Please complete the following fields to register as a farmer or foodmaker.</small></h4>                
+                <h4 ng-show="signUpAsVendor" class="modal-title">Sign Up as a Farmer<br /><small>Please complete the following fields to register as a farmer or foodmaker.</small></h4>
+                <h4 ng-hide="signUpAsVendor" class="modal-title">Sign Up as a Foodie<br /><small>Please complete the following fields to register as a foodie.</small></h4>                  
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">                   
-                    <form role="form" name="newVendorForm" novalidate>
+                    <form role="form" name="newUserForm" novalidate>
                         <div class="row">
                             <div class="col-xs-12 col-md-12">
-                                <div class="form-group" ng-class="{ 'has-error' : newVendorSubmitted && newVendorForm.vendorFirstName.$invalid }">
+                                <div class="form-group" ng-class="{ 'has-error' : newUserSubmitted && newUserForm.vendorFirstName.$invalid }">
                                     <label for="item-name">First Name</label>
                                     <input required ng-model="newVendorFirstName" type="text" name="vendorFirstName" class="form-control" placeholder="First Name" maxlength="40"/>
                                 </div>
@@ -216,7 +218,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-md-12">
-                                <div class="form-group" ng-class="{ 'has-error' : newVendorSubmitted && newVendorForm.vendorLastName.$invalid }">
+                                <div class="form-group" ng-class="{ 'has-error' : newUserSubmitted && newUserForm.vendorLastName.$invalid }">
                                     <label for="item-name">Last Name</label>
                                     <input required ng-model="newVendorLastName" type="text" name="vendorLastName" class="form-control" placeholder="Last Name" maxlength="40"/>
                                 </div>
@@ -224,7 +226,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="form-group" ng-class="{ 'has-error' : newVendorSubmitted && newVendorForm.vendorUserName.$invalid }">
+                                <div class="form-group" ng-class="{ 'has-error' : newUserSubmitted && newUserForm.vendorUserName.$invalid }">
                                     <label for="item-name">Username</label>
                                     <input required ng-model="newVendorUserName" type="text" name="vendorUserName" class="form-control" placeholder="Username" maxlength="40"/>
                                 </div>
@@ -232,7 +234,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="form-group" ng-class="{ 'has-error' : newVendorSubmitted && newVendorForm.vendorEmail.$invalid }">
+                                <div class="form-group" ng-class="{ 'has-error' : newUserSubmitted && newUserForm.vendorEmail.$invalid }">
                                     <label for="item-name">Email</label>
                                     <input required ng-model="newVendorEmail" type="text" name="vendorEmail" class="form-control" placeholder="Email" maxlength="50"/>
                                 </div>
@@ -240,7 +242,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="form-group" ng-class="{ 'has-error' : newVendorSubmitted && newVendorForm.vendorPassword.$invalid }">
+                                <div class="form-group" ng-class="{ 'has-error' : newUserSubmitted && newUserForm.vendorPassword.$invalid }">
                                     <label for="item-name">Password</label>
                                     <input required ng-model="newVendorPassword" type="password" name="vendorPassword" class="form-control" placeholder="Password" maxlength="30"/>
                                 </div>
@@ -251,7 +253,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" ng-click="newVendorSubmit()" class="btn beLocal-btn-filled">Sign Up as a Farmer</button>
+                <button ng-show="signUpAsVendor" type="submit" ng-click="newVendorSubmit()" class="btn beLocal-btn-filled">Sign Up as a Farmer</button>
+                <button ng-hide="signUpAsVendor" type="submit" ng-click="newCustomerSubmit()" class="btn beLocal-btn-filled">Sign Up as a Foodie</button>                
             </div>
         </div>
         <!-- /.modal-content -->
