Modified a few strings

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -64,7 +64,7 @@
                             </div>
                             <p class="getting-started-font">To register as a foodie, sign up using Facebook by clicking the button below.</p>
                             <br>                       
-                            <a ng-click="signUpAsCustomer()" style="margin-right: 10px;" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
+                            <a ng-click="signUpAsCustomer()" style="margin-right: 10px;" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up With Facebook</a>
                             <a ng-click="signUpAsCustomerNoFB()" data-toggle="modal" data-target="#createUserModal" class="btn btn-lg beLocal-btn-filled">Sign Up Without Facebook</a>                            
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                             </div>
                             <p class="getting-started-font">To register as a farmer or foodmaker, sign up using Facebook by clicking the button below.</p>
                             <br>
-                            <a ng-click="signUpAsVendor()" style="margin-right: 10px;" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
+                            <a ng-click="signUpAsVendor()" style="margin-right: 10px;" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up With Facebook</a>
                             <a ng-click="signUpAsVendorNoFB()" data-toggle="modal" data-target="#createUserModal" class="btn btn-lg beLocal-btn-filled">Sign Up Without Facebook</a>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Login<br /><small>Please enter your username and password or login using Facebook.</small></h4>                
+                <h4 class="modal-title">Login<br /><small>Please login with Facebook or enter your username and password.</small></h4>                
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">
