--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -36,7 +36,7 @@
                         <span ng-hide="StateService.getCurrentUser().vendor.twitter_url == null"> 
                              | <a href="{{StateService.getCurrentUser().vendor.twitter_url}}">Twitter</a> </span>
                         <span ng-hide="StateService.getCurrentUser().vendor.facebook_url == null">
-                             | <a ng-hide="StateService.getCurrentUser().vendor.facebook_url == null" href="{{StateService.getCurrentUser().vendor.facebook_url}}">Facebook</a>
+                             | <a ng-hide="StateService.getCurrentUser().vendor.facebook_url == null" href="{{StateService.getCurrentUser().vendor.facebook_url}}" target="_blank">Facebook</a>
                         </span>
                     </span>
                     <span class="update-profile-sm-buttons pull-right">
@@ -322,6 +322,12 @@
                             <div class="col-xs-12">
                                 <label for="company-description">Company Website</label>
                                 <input ng-model="currentUser.vendor.webpage" type="text" name="website" class="form-control" id="company-description" placeholder="Optional Website URL" maxlength="400"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <label for="company-description">Facebook Link</label>
+                                <input ng-model="currentUser.vendor.facebook_url" type="text" name="website" class="form-control" id="company-description" placeholder="Facebook URL" maxlength="400"/>
                             </div>
                         </div>
                         <div class="row">
