--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -10,7 +10,7 @@
             <div class="vendor-avatar-img" style="background-image:url({{vendorDetails.vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
                 <!-- <img ng-src="{{vendorDetails.vendor.photo.image_url}}"> -->
                 <div class="col-xs-12">
-                        <span class="pull-right like-button-position" data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+                        <span class="pull-right like-button-position" data-toggle="tooltip" style="display:inline-block" data-placement="left" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
                         <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
                             <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : vendorDetails.vendor.is_liked}"></span>
                             <span ng-hide="vendorDetails.vendor.is_liked">Like</span>
