--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -101,7 +101,7 @@
 
                         <!-- Display icons which link to corresponding modals (tooltips are outer span tag) -->
                         <div class="col-xs-3 edit-delete-buttons">
-                            <span data-toggle="tooltip" data-placement="bottom" title="Leave Market">
+                            <span data-toggle="tooltip" data-placement="left" title="Leave Market">
                                 <span class="edit-text glyphicon glyphicon-trash" ng-click="leaveMarket(location)" data-toggle="modal" data-target="TBA"></span>
                             </span>
                         </div> 
@@ -152,10 +152,10 @@
 
                         <!-- Display icons which link to corresponding modals (tooltips are outer span tag) -->
                         <div class="col-xs-3 edit-delete-buttons">
-                            <span data-toggle="tooltip" data-placement="bottom" title="Edit Location">
+                            <span data-toggle="tooltip" data-placement="left" title="Edit Location">
                             <span class="edit-text glyphicon glyphicon-edit" data-toggle="modal" data-target="#locationModal" ng-click="editLocation(location)"></span>
                             </span>
-                            <span data-toggle="tooltip" data-placement="bottom" title="Delete Location">
+                            <span data-toggle="tooltip" data-placement="left" title="Delete Location">
                             <span class="edit-text glyphicon glyphicon-trash" ng-click="deleteLocation(location)" data-toggle="modal" data-target="TBA"></span>
                             </span>
                         </div> 
@@ -242,10 +242,10 @@
 
                     <!-- Display icons which link to corresponding modals (tooltips are outer span tag) -->
                     <div class="col-xs-3 edit-delete-buttons">
-                        <span data-toggle="tooltip" data-placement="bottom" title="Edit Item">
+                        <span data-toggle="tooltip" data-placement="left" title="Edit Item">
                             <span class="edit-text glyphicon glyphicon-edit" data-toggle="modal" data-target="#itemModal" ng-click="editItem(product)"></span>
                         </span>
-                        <span data-toggle="tooltip" data-placement="bottom" title="Delete Item">
+                        <span data-toggle="tooltip" data-placement="left" title="Delete Item">
                             <span class="edit-text glyphicon glyphicon-trash" ng-click="deleteProduct(product)" data-toggle="modal" data-target="TBA"></span>
                         </span>
                     </div> 
